Added commands and replaced deprecated code